[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Email.JPG" type="Texture" id=1]
[ext_resource path="res://Scripts/Email.gd" type="Script" id=2]
[ext_resource path="res://Assets/Purple.png" type="Texture" id=3]
[ext_resource path="res://Assets/lmb.png" type="Texture" id=4]
[ext_resource path="res://Assets/scr.png" type="Texture" id=5]
[ext_resource path="res://Assets/mouse.png" type="Texture" id=6]
[ext_resource path="res://Assets/rmb.png" type="Texture" id=7]

[sub_resource type="Gradient" id=2]

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 36.0

[node name="Email" type="Node2D"]
script = ExtResource( 2 )

[node name="SplashScreen" type="KinematicBody2D" parent="."]
position = Vector2( -960, 0 )

[node name="SplashScreenSprite" type="Sprite" parent="SplashScreen"]
position = Vector2( 480, 360 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="SplashScreen"]
one_shot = true
autostart = true

[node name="UI" type="Node2D" parent="."]

[node name="BG" type="Sprite" parent="UI"]
position = Vector2( 480, 773 )
scale = Vector2( 8.27731, 1660 )
z_index = -2
texture = SubResource( 3 )

[node name="Words" type="Node2D" parent="UI"]

[node name="Mail" type="Label" parent="UI/Words"]
margin_left = 7.0
margin_top = 7.0
margin_right = 40.0
margin_bottom = 21.0
size_flags_vertical = 1
text = "MAIL"

[node name="Welcome" type="Label" parent="UI/Words"]
margin_left = 760.0
margin_top = 7.0
margin_right = 958.0
margin_bottom = 21.0
size_flags_vertical = 1

[node name="TopBar" type="Line2D" parent="UI"]
points = PoolVector2Array( 974, 24, -11, 24 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )

[node name="SignUp" type="Button" parent="UI"]
margin_left = 898.0
margin_top = 2.0
margin_right = 958.0
margin_bottom = 22.0
text = "Sign Up"

[node name="SignUpWindow" type="KinematicBody2D" parent="UI"]
z_as_relative = false

[node name="BG" type="Sprite" parent="UI/SignUpWindow"]
position = Vector2( 1440, 360 )
scale = Vector2( 4, 4 )
z_as_relative = false
texture = ExtResource( 3 )

[node name="EmailInput" type="TextEdit" parent="UI/SignUpWindow"]
margin_left = 1300.0
margin_top = 300.0
margin_right = 1570.0
margin_bottom = 320.0
hint_tooltip = "Email Address"

[node name="PasswordInput" type="TextEdit" parent="UI/SignUpWindow"]
margin_left = 1300.0
margin_top = 380.0
margin_right = 1570.0
margin_bottom = 400.0
hint_tooltip = "Password"

[node name="SignUpText" type="Label" parent="UI/SignUpWindow"]
margin_left = 1405.0
margin_top = 200.0
margin_right = 1444.0
margin_bottom = 214.0
text = "Sign Up"
align = 1

[node name="SignUpError" type="Label" parent="UI/SignUpWindow"]
margin_left = 1228.0
margin_top = 411.0
margin_right = 1648.0
margin_bottom = 425.0
align = 1

[node name="EmailText" type="Label" parent="UI/SignUpWindow"]
margin_left = 1305.0
margin_top = 280.0
margin_right = 1344.0
margin_bottom = 294.0
text = "Email (Must End In \"@mail.com\")"

[node name="PasswordText" type="Label" parent="UI/SignUpWindow"]
margin_left = 1305.0
margin_top = 360.0
margin_right = 1365.0
margin_bottom = 374.0
text = "Password (Must Be More Than 4 Characters)"

[node name="CreateAccount" type="Button" parent="UI/SignUpWindow"]
margin_left = 1380.0
margin_top = 440.0
margin_right = 1489.0
margin_bottom = 460.0
text = "Create Account"

[node name="SendWindow" type="KinematicBody2D" parent="UI"]
position = Vector2( -960, 720 )
z_as_relative = false

[node name="BG" type="Sprite" parent="UI/SendWindow"]
position = Vector2( 1442.5, 360 )
scale = Vector2( 4, 4 )
z_as_relative = false
texture = ExtResource( 3 )

[node name="SubjectInput" type="TextEdit" parent="UI/SendWindow"]
margin_left = 1300.0
margin_top = 278.0
margin_right = 1570.0
margin_bottom = 298.0
hint_tooltip = "Email Address"

[node name="RecipientInput" type="TextEdit" parent="UI/SendWindow"]
margin_left = 1300.0
margin_top = 231.0
margin_right = 1570.0
margin_bottom = 251.0
hint_tooltip = "Email Address"

[node name="BodyInput" type="TextEdit" parent="UI/SendWindow"]
margin_left = 1300.0
margin_top = 325.0
margin_right = 1570.0
margin_bottom = 456.0
hint_tooltip = "Password"

[node name="ComposeEmailText" type="Label" parent="UI/SendWindow"]
margin_left = 1373.0
margin_top = 173.0
margin_right = 1493.0
margin_bottom = 187.0
text = "Compose An Email"
align = 1

[node name="SubjectText" type="Label" parent="UI/SendWindow"]
margin_left = 1302.0
margin_top = 258.0
margin_right = 1513.0
margin_bottom = 272.0
text = "Message Subject"

[node name="RecipientText" type="Label" parent="UI/SendWindow"]
margin_left = 1302.0
margin_top = 210.0
margin_right = 1569.0
margin_bottom = 224.0
text = "Message Recipient (Ends In \"@mail.com\")"

[node name="BodyText" type="Label" parent="UI/SendWindow"]
margin_left = 1302.0
margin_top = 305.0
margin_right = 1394.0
margin_bottom = 319.0
text = "Message Body"

[node name="SendEmail" type="Button" parent="UI/SendWindow"]
margin_left = 1380.0
margin_top = 494.0
margin_right = 1489.0
margin_bottom = 514.0
text = "Send"

[node name="ExitEmail" type="Button" parent="UI/SendWindow"]
margin_left = 1380.0
margin_top = 528.0
margin_right = 1489.0
margin_bottom = 548.0
text = "Exit"

[node name="FeedbackText" type="Label" parent="UI/SendWindow"]
margin_left = 1230.0
margin_top = 467.0
margin_right = 1650.0
margin_bottom = 481.0
align = 1

[node name="SentText" type="Label" parent="UI/SendWindow"]
margin_left = 1230.0
margin_top = 467.0
margin_right = 1650.0
margin_bottom = 481.0
align = 1

[node name="ComposeEmail" type="Button" parent="UI"]
margin_left = 1.0
margin_top = 26.0
margin_right = 83.0
margin_bottom = 46.0
disabled = true
text = "Compose Email"

[node name="WindowAnchor" type="Node2D" parent="UI"]
position = Vector2( 480, 360 )

[node name="OffScreenAnchor" type="Node2D" parent="UI"]
position = Vector2( 1440, 1080 )

[node name="Cameras" type="Node2D" parent="."]
position = Vector2( -960, 0 )

[node name="Camera2" type="Camera2D" parent="Cameras"]
offset = Vector2( 1440, 360 )

[node name="Camera1" type="Camera2D" parent="Cameras"]
offset = Vector2( 480, 360 )
current = true

[node name="Mouse" type="KinematicBody2D" parent="."]
position = Vector2( -50, -50 )
scale = Vector2( 0.5, 0.5 )
z_index = 12
z_as_relative = false
collision_layer = 4095

[node name="open" type="Sprite" parent="Mouse"]
position = Vector2( 0, 20 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="left" type="Sprite" parent="Mouse"]
position = Vector2( 0, 20 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="right" type="Sprite" parent="Mouse"]
position = Vector2( 0, 20 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="scroll" type="Sprite" parent="Mouse"]
position = Vector2( 0, 20 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="clickzone" type="Area2D" parent="Mouse"]
collision_layer = 15
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse/clickzone"]
position = Vector2( 0, -7 )
shape = SubResource( 1 )
